--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  badges: ^2.0.1
   cupertino_icons: ^1.0.2
   flutter_feather_icons: ^2.0.0+1
+  flutter_staggered_grid_view: ^0.4.0
+  fluttericon: ^2.0.0
   list_tile_switch: ^1.0.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
-  fluttericon: ^2.0.0
-
+  backdrop: ^0.6.1
+  carousel_pro_nullsafety: ^1.0.2
+  flutter_swiper_null_safety: ^1.0.2
+  auto_size_text_pk: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
